--- a/tourist-web/src/main/webapp/view/manage/platform/main.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/main.html
@@ -111,7 +111,8 @@
                     <a href="#"><i class="fa fa-edit"></i><span class="nav-label">结算管理</span><span
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a class="J_menuItem" href="settlementSheet/settlementSheetList.html">结算/提现审核</a>
+                        <li><a class="J_menuItem" href="settlementSheet/settlementSheetList.html"
+                               th:href="@{/distributionPlatform/toSettlementSheetList}">结算/提现审核</a>
                         </li>
                     </ul>
                 </li>
