--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -211,11 +211,11 @@
                 <p class="kimg dhshouyeicon"></p>
                 <p>首页</p>
             </a>
-            <a href="search.html" class="weui_navbar_item ">
+            <a href="search.html" class="weui_navbar_item " th:href="@{/wap/showSearchView}">
                 <p class="kimg dhsousuoicon"></p>
                 <p>搜索</p>
             </a>
-            <a href="my.html" class="weui_navbar_item">
+            <a href="my.html" class="weui_navbar_item" th:href="@{/wap/showMyInfo}">
                 <p class="kimg dhwodeicon"></p>
                 <p> 我的</p>
             </a>
