--- a/tourist-web/src/main/webapp/view/wap/allOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/allOrder.html
@@ -8,7 +8,7 @@
   ~ 2013-2016. All rights reserved.
   -->
 
-<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -65,15 +65,15 @@
     <!--底部导航-->
     <!--<div class="weui_navbar daohangs"  th:replace="view/wap/bottom.html :: bottom">-->
     <div class="weui_navbar daohangs">
-        <a href="index.html" class="weui_navbar_item">
+        <a href="index.html" th:href="@{/wap/}" class="weui_navbar_item">
             <p class="kimg dhshouyeicon"></p>
             <p>首页</p>
         </a>
-        <a href="search.html" class="weui_navbar_item ">
+        <a href="search.html" class="weui_navbar_item " th:href="@{/wap/showSearchView}">
             <p class="kimg dhsousuoicon"></p>
             <p>搜索</p>
         </a>
-        <a href="my.html" class="weui_navbar_item weui_bar_item_on">
+        <a href="my.html" class="weui_navbar_item" th:href="@{/wap/showMyInfo}">
             <p class="kimg dhwodeicon"></p>
             <p> 我的</p>
         </a>
