--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
@@ -141,12 +141,36 @@
             </div>
         </div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span
+                            aria-hidden="true">&times;</span><span
+                            class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">链接地址</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="linkUrl" class="col-sm-2 control-label">链接</label>
+                        <div class="col-sm-10">
+                            <input type="url" name="linkUrl" id="linkUrl" class="form-control" placeholder="链接地址">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="../../../../assets/js/jquery.min.js"></script>
 <script src="../../../../assets/libs/bootstrap/bootstrap.min.js"></script>
 <script src="../../../../assets/libs/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="../../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
 <script th:inline="javascript">
+    linkUrl = /*[[@{/wap/goodInfo}]]*/ '';
     recommendTouristGood = /*[[@{/distributionPlatform/recommendTouristGood}]]*/ "../../../mock/platform/httpJson.json"
     unRecommendTouristGood = /*[[@{/distributionPlatform/unRecommendTouristGood}]]*/ "../../../mock/platform/httpJson.json"
     showTouristGood = /*[[@{/distributionPlatform/showTouristGood}]]*/ "touristGood.html";
