结算单明细添加

--- a/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
@@ -127,6 +127,8 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
 <script th:inline="javascript">
+    showSettlementDetails = /*[[@{/distributionPlatform/showSettlementDetails}]]*/
+            "../../common/settlementDetailsList.html";
     modifySettlementSheet = /*[[@{/distributionPlatform/modifySettlementSheet}]]*/
             "../../../../mock/platform/httpJson.json";
 
