--- a/tourist-web/src/main/webapp/view/manage/common/settlementDetailsList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/settlementDetailsList.html
@@ -32,6 +32,7 @@
                         应收款：<span th:text="${settlement.receivableAccount}">1000</span>元,
                         结算日期：<span th:text="${settlement.createTime}">2010-10-10</span>,
                         平台审核状态：<span th:text="${settlement.platformChecking.value}">已审核</span>
+                        <button onclick="history.go(-1)" class="btn btn-success" type="button">返回</button>
                     </h2>
             </div>
         </div>
@@ -42,47 +43,40 @@
             <div class="ibox-title">
                 <h5>订单明细</h5>
 
-                <!--<div class="col-md-8">-->
-                    <!--<div class="row"><label></label></div>-->
-
-                <!--</div>-->
-                <!--<div class="col-md-4">-->
-                    <!--<div class="row">-->
-                        <!--<label>自审：</label>-->
-                        <!--<button class="btn btn-success">审核通过/已审核</button>-->
-                        <!--<button class="btn btn-success">导出结算</button>-->
-                    <!--</div>-->
-
-                <!--</div>-->
             </div>
             <div class="ibox-content">
                 <div class="roll-right">
-                    <label>自审：</label>
-                    <button class="btn btn-success">审核通过/已审核</button>
-                    <button class="btn btn-success">导出结算</button>
+                    <label>审核：</label>
+                    <button onclick="modifySettlementState()"
+                            th:if="!${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                            th:disabled="${settlement.selfChecking.code==1}?'disabled'"
+                            th:text="${settlement.selfChecking.code==0}?'审核通过':'已审核'"
+                            class="btn btn-success">审核通过</button>
+                    <button onclick="modifySettlementState()"
+                            th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                             th:disabled="${settlement.platformChecking.code==1}?'disabled'"
+                              th:text="${settlement.platformChecking.code==0}?'审核通过':'已审核'" class="btn btn-success">
+                        审核通过</button>
+                    <!--<button class="btn btn-success">导出结算</button>-->
                 </div>
-                <!--<div class="row">-->
-                    <!--<div class="col-md-8">-->
-                        <!--<label class="text-box">订单明细</label>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-4">-->
-                        <!--<label>自审：</label>-->
-                        <!--<button class="btn btn-success">审核通过/已审核</button>-->
-                        <!--<button class="btn btn-success">导出结算</button>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <table id="goodsTable" data-toggle="table" data-url="../../../mock/supplier/settlementDetailsList.json"
+
+                <table id="goodsTable" data-toggle="table"
+                       data-url="../../../mock/supplier/settlementDetailsList.json"
+                       th:attr="data-url=@{/base/touristOrders}"
                        data-method="get" data-side-pagination="server" data-page-number="1" data-page-size="10"
-                       data-escape="true" data-query-params="getParams" data-toolbar="#toolbar">
+                       data-escape="true" data-query-params="getParams" data-toolbar="#toolbar"
+                       data-pagination="true"
+                       data-show-export="true"
+                       data-click-to-select="true">
                     <thead>
                     <tr>
                         <th data-field="orderNo" data-align="center">订单号</th>
-                        <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
+                        <th data-field="touristName" data-align="center">商品名称</th>
                         <th data-field="orderMoney" data-align="center" data-sortable="true">订单金额</th>
-                        <th data-field="commission" data-align="center" data-sortable="true">佣金</th>
+                        <th data-field="commission" data-align="center">佣金</th>
                         <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
                         <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
-                        <th data-field="peopleNumber" data-align="center" data-sortable="true">购买数量</th>
+                        <th data-field="peopleNumber" data-align="center">人员数量</th>
                     </tr>
                     </thead>
                 </table>
@@ -97,6 +91,14 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
+<script type="text/javascript" th:inline="javascript">
+    /*<![CDATA[*/
+
+    var auditUrl=/*[[@{/base/modifySettlementState}]]*/'settlementDetailsList.html';
+    var settlementId=/*[[${settlement.id}]]*/'0';
+    /*]]>*/
+
+</script>
 <script src="../../../assets/js/manage/supplier/settlementDetailsList.js"></script>
 </body>
 
