--- a/tourist-web/src/main/webapp/view/manage/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/manage/common/orderList.html
@@ -178,6 +178,7 @@
 
 <div id="modifyTouristDate" style="margin: 10px;display: none">
 </div>
+<img id="goodsResPath" style="display: none" res:src="''">
 <script src="http://resali.huobanplus.com/cdn/jquery/3.1.1/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
 
