--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
@@ -76,10 +76,11 @@
                                             <label class="col-sm-1 control-label">封面图片：</label>
 
                                             <div class="col-sm-10">
-                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="@{*{touristImgUri}}"
+                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
                                                          src="http://placehold.it/300x200?text=封面&size=50"/>
-                                                <label title="上传图片" for="fileImage" class="btn btn-success">
-                                                    <input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
+                                                <label title="上传图片" for="upload" class="btn btn-success">
+                                                    <input onchange="uploadImage()" type="file" accept="image/*"
+                                                           id="upload" name="upload" class="hide"/> 上传新图片
                                                 </label>
                                                 <span class="help-block m-b-none">推荐图片大小:300x200</span>
                                             </div>
@@ -89,9 +90,9 @@
                                             <label class="col-sm-1 control-label">上传组图：</label>
 
                                             <div class="col-sm-10">
-                                                <img style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
+                                                <img style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
                                                      src="http://placehold.it/300x200?text=封面&size=50"/>
-                                                <img style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
+                                                <img style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
                                                      src="http://placehold.it/300x200?text=封面&size=50"/>
                                                 <!--<label title="上传图片" for="fileImage" class="btn btn-success">-->
                                                     <!--<input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片-->
@@ -328,6 +329,7 @@
     /*<![CDATA[*/
 
     var submitUrl=/*[[@{/supplier/saveTouristGood}]]*/'../../../mock/supplier/httpJson.json';
+    var touristImgUri=/*[[${good.touristImgUri}]]*/'';
     /*]]>*/
 
 </script>
