--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsList.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsList.html
@@ -116,6 +116,7 @@
         </thead>
     </table>
 </div>
+<img id="goodsResPath" style="display: none" res:src="''" height="50px" width="80px">
 <script src="http://resali.huobanplus.com/cdn/jquery/3.1.1/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
