--- a/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="ibox-content">
                     <!--/*@thymesVar id="login" type="com.huotu.huobanplus.sns.entity.Circle"*/-->
-                    <form method="post" class="form-horizontal" th:object="${login}">
+                    <form method="post" class="form-horizontal">
                         <input type="hidden" name="permissionId" th:value="${id}"/>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">用户名:</label>
@@ -77,7 +77,7 @@
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button"
-                                        onclick="permissionConfig.submitForm(this)">确定修改</button>
+                                        onclick="submitForm()">确定修改</button>
                             </div>
                         </div>
                     </form>
@@ -97,47 +97,36 @@
 
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    var permissionConfig={};
-    permissionConfig.searchModel={};
-    permissionConfig.currentSearchType=0;
-    //        permissionConfig.sharePicPath=/*[[${sharePicPath}]]*/ '';
+    //        .sharePicPath=/*[[${sharePicPath}]]*/ '';
 
     //提交
-    permissionConfig.submitForm=function(obj) {
-        if($(obj).attr("class")=="btn btn-primary disabled"){
+    var submitForm=function() {
+        var oldPassword=$("input[name='oldPassword']").val();
+        var newPassword=$("input[name='newPassword']").val();
+        var affirmPassword=$("input[name='affirmPassword']").val();
+        if(newPassword==""){
+            layer.msg("请输入密码")
             return;
         }
-        var ld=layer.load(5, {shade: false});
-        $(obj).attr("class","btn btn-primary disabled");
-        var loginModel={};
-        loginModel.id=$("input[name='permissionId']").val();
-        loginModel.loginName=$("input[name='loginName']").val();
-        loginModel.password=$("input[name='password']").val();
+        if(affirmPassword!=newPassword){
+            layer.msg("密码不一致");
+            return;
+        }
 
-        var authors="";
-        var havePermission=$("input[name='permissionChk']:checked");
-        $(havePermission).each(function(index,val){
-            authors=authors+$(val).val();
-            if(index<havePermission.length-1){
-                authors=authors+"|";
-            }
-        });
-        loginModel.authors=authors;
-        console.log(loginModel);
         $.ajax({
             type:'POST',
-            url: '/top/permission/savePermission',
+            url: '/supplier/resetSupplierPassword',
             dataType: 'json',
-            contentType:"application/json",
-            data: JSON.stringify(loginModel),
+            data: {oldPassword:oldPassword,newPassword:newPassword},
             success:function(result){
-                layer.close(ld);
-                layer.msg("保存成功！");
-                window.setTimeout("window.location='/admin/permission/permissionList.html'",1000);
+                if(result.code==200){
+                    layer.msg("保存成功！");
+                }else {
+                    layer.msg(result.message);
+                }
 
             },
             error:function(e){
-                layer.close(ld);
                 layer.msg("保存失败！");
             }
         });
