页面优化，添加采购商货品

--- a/tourist-web/src/main/webapp/view/wap/activityTypeList.html
+++ b/tourist-web/src/main/webapp/view/wap/activityTypeList.html
@@ -27,14 +27,14 @@
                     登山登山
                 </a>
             </li>
-            <li class="pj"><a href="activityTypeGoods.html"> 徒步步</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 登山</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 徒步步步</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 登山</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 徒步</a></li>
-            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 徒步步</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 自驾</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 登山</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 徒步步步</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 自驾</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 登山</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 徒步</a></li>
+            <li class="pj" th:remove="all"><a href="activityTypeGoods.html"> 自驾</a></li>
         </ul>
 
     </div>
