--- a/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
@@ -35,11 +35,7 @@
                 <div class="ibox-title">
                     <h5>修改密码</h5>
                 </div>
-                <div class="ibox-title">
-                    <button onclick="history.go(-1)" class="btn btn-primary" type="button">返回</button>
-                </div>
                 <div class="ibox-content">
-                    <!--/*@thymesVar id="login" type="com.huotu.huobanplus.sns.entity.Circle"*/-->
                     <form method="post" class="form-horizontal">
                         <input type="hidden" name="permissionId" th:value="${id}"/>
                         <div class="form-group">
@@ -77,7 +73,9 @@
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button"
-                                        onclick="submitForm()">确定修改</button>
+                                        onclick="submitForm()">确定修改
+                                </button>
+                                <button onclick="history.go(-1)" class="btn btn-primary" type="button">返 回</button>
                             </div>
                         </div>
                     </form>
@@ -88,39 +86,37 @@
 </div>
 <script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.5/bootstrap.min.js"></script>
-<!--<script src="http://resali.huobanplus.com/cdn/hotui/js/content.min.js"></script>-->
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/iCheck/icheck.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
-    //        .sharePicPath=/*[[${sharePicPath}]]*/ '';
     //提交
-    var submitForm=function() {
-        var oldPassword=$("input[name='oldPassword']").val();
-        var newPassword=$("input[name='newPassword']").val();
-        var affirmPassword=$("input[name='affirmPassword']").val();
-        if(newPassword==""){
+    var submitForm = function () {
+        var oldPassword = $("input[name='oldPassword']").val();
+        var newPassword = $("input[name='newPassword']").val();
+        var affirmPassword = $("input[name='affirmPassword']").val();
+        if (newPassword == "") {
             layer.msg("请输入密码")
             return;
         }
-        if(affirmPassword!=newPassword){
+        if (affirmPassword != newPassword) {
             layer.msg("密码不一致");
             return;
         }
         $.ajax({
-            type:'POST',
-            url: '/supplier/resetSupplierPassword',
+            type: 'POST',
+            url: '/distributionPlatform/resetPassword',
             dataType: 'json',
-            data: {oldPassword:oldPassword,newPassword:newPassword},
-            success:function(result){
-                if(result.code==200){
+            data: {oldPassword: oldPassword, newPassword: newPassword},
+            success: function (result) {
+                if (result.data == 200) {
                     layer.msg("保存成功！");
-                }else {
+                } else {
                     layer.msg(result.message);
                 }
 
             },
-            error:function(e){
+            error: function (e) {
                 layer.msg("保存失败！");
             }
         });
